fixed margins collapsing on teams section

--- a/css/styles.css
+++ b/css/styles.css
@@ -615,7 +615,6 @@ body{
     flex-direction: column;
     gap: 72px;
     align-items: center;
-    margin-top: 72px; 
 }
 
 @media screen and (min-width: 768px) {
